# mtg_blog

./: .gitignore  404.html  CNAME  README.md  _config.redefine.yml  _config.yml  atom.xml  index.html  package-lock.json  package.json  pyproject.toml  replace.py  robots.txt  search.xml  sitemap.txt  sitemap.xml
4C-Elemental/: index.html
About-Play-Boosters/: index.html
Adventure-and-Lier/: index.html
BLB-Black/: index.html
BLB-Blue/: index.html
BLB-Colorless/: index.html
BLB-Green/: index.html
BLB-Limited-Preliminary/: index.html
BLB-Red/: index.html
BLB-Standard-Preliminary/: index.html
BLB-White/: index.html
BLB-mechanism/: index.html
BLB-multicolors/: index.html
BnR-Dec-4-2023/: index.html
BnR-Dec-4-2024/: index.html
Boros-Equipment-Standard/: index.html
Chandra-History/: index.html
Characteristic-Defining-Ability/: index.html
Contact-Us/: index.html
DFC-Copy/: index.html
DSK-mechanism/: index.html
Deck-Building-Basic/: index.html
Fun-Combos-in-MTG/: index.html
Golgari-Obliterator/: index.html
Golgari-Yawgmoth/: index.html
Grixis-Battles/: index.html
How-Animate-Dead-Works/: index.html
How-to-Describe-an-Object/: index.html
How-to-Get-Advance-in-Limited-Draft/: index.html
How-to-Get-Advance-in-Limited-Sealed/: index.html
Izzet-Murktide/: index.html
LCI-Black/: index.html
LCI-Blue/: index.html
LCI-Green/: index.html
LCI-Red/: index.html
LCI-Standard-Preliminary/: index.html
LCI-White/: index.html
LCI-mechanic/: index.html
LCI-multicolors/: index.html
MH2-Mythics-Elementals/: index.html
(+529 files in other folders)
