[tool.poetry]
name = "mtg-blog-card-replace-tools"
version = "0.1.0"
description = ""
authors = ["miohitokiri5474 <lltzpp>"]
readme = "README.md"
packages = [{include = "mtg_blog_card_replace_tools"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
scrython = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
